@@ -1,2 +1,2 @@
-java --module-path "%cd%\lib\javafx-sdk-21.0.2\lib" --add-modules javafx.controls,javafx.fxml -jar FilesEngine.jar
+java -jar out/artifacts/FilesEngine_jar/FilesEngine.jar
 pause
